fix treatments image being stretched out along width too much in order to be in the middle of parent container.

--- a/src/style.css
+++ b/src/style.css
@@ -824,7 +824,7 @@ width: 100%;
     }
     #section-7-image-container {
         flex: 0 0 auto;
-        width: 50%;
+        
         height: 100%;
     /* border: 3px solid black;     */
     background-color: var(--secondary-background-color);
@@ -838,8 +838,8 @@ width: 100%;
     }
     #section-7-image-wrapper img {
         
-        width: 100%;
-        height: auto;
+        width: 584px;
+        height: 609px;
     
     }
     #section-7-text-container {
